--- a/style.css
+++ b/style.css
@@ -57,6 +57,13 @@ body {
 .botoes{
     display:  block;
 }
+.abas-textos{
+    background-color: var(--texto-fundo);
+    padding: 40px;
+    border-radius: 0 0 40px 40px;
+}
+
+
 
 @media screen and (min-width: 768px) {
     .botoes {
